# plumber

./: .gitignore  CLAUDE.md  README.md  insights-rbac-ui-app-caddy-config.yaml  main.py  pyproject.toml
.github/workflows/: test.yml
extraction/: __init__.py
generation/: __init__.py
scripts/: generate_configmaps.sh  generate_configmaps_rbac_ui.sh  generate_configmaps_starter_app.sh  generate_konflux_pipeline.sh  generate_learning_resources_pipeline.sh  generate_minikube_pipeline.sh  setup-git-hooks.sh
template/: app_caddy.template.j2  konflux_pipeline_template.yaml  minikube_pipeline_template.yaml  pipeline_template.yaml  proxy_caddy.template.j2  template.yaml
tests/: test_app_caddyfile.py  test_cli_arguments.py  test_configmap_generation.py  test_generate_frontend_proxy_caddyfile.py  test_generate_pipeline.py  test_get_app_url.py  test_minikube_pipeline.py  test_pipeline_validation.py  test_proxy_caddy_template.py
